50multitheading/pr21/src/main/java/org/example/pr21/Pr21Application.java
package org.example.pr21;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class Pr21Application {

    public static void main(String[] args) {
//        Thread thread = new Thread(new StringLength("hello")); // error

//        Thread thread = new Thread(new StringLength("hello"));
    }

}
